# field_decay

./: .gitignore  README.md  accretion.py  compact_object.py  constants.py  field_decay_law.py  field_suppression.py  magnetic_decay.config  mcmc_functions.py  pyproject.toml
docs/: check_dai_torque.py  dai_torque.ipynb  mushtukov_2019.ipynb  oblique_rotator.ipynb  payne_continuity.ipynb  test_mushtukov_2019.py
field_decay/: accretion.py  constants.py  field_decay_law.py  torques.py
field_decay/compact_objects/: __init__.py  co.py  neutron_star.py
scripts/: create_data.py  field_suppression.py  magnetic_decay_test.config
tests/: accretion_test.py  compactobject_test.py  field_decay_test.py
