[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "cython>=3.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "field-decay"
version = "1.0"
dependencies = [
    "numpy>=1.24.4",
    "astropy>=5.3.3",
    "scipy>=1.1.1",
    "celerite>=0.4.3",
    "matplotlib"
]
requires-python = ">=3.8"
authors = [
    {name = "Andres Gurpide", email = "andres.gurpide@gmail.com"},
]
description="Package to calculate magnetic field decay onto a neutron star due to accretion."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
keywords = [
    "???",
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Repository = "https://github.com/andresgur/field-decay"

[project.optional-dependencies]
test = [
    "pytest>=8.3.5"
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autoapi>=3.6.0",
    "myst_parser>=4.0.1",
    "graphviz>=0.20.3",
    "nbsphinx>=0.9.7",
    "toml>=0.10.2"
]


[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.sphinx]
title = "Field Decay"
