[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "Cython",
]
build-backend = "setuptools.build_meta"

[project]
name = "field-decay"
version = "1.0.7"
dependencies = [
    "numpy>=1.24.4",
    "astropy>=5.3.3",
    "scipy>=1.1.1",
    "Cython>=3.0.0",
    "numba>=0.55.1",
    "matplotlib",
    " tqdm>2.0"
]
requires-python = ">=3.8"
authors = [
    {name = "Andres Gurpide", email = "andres.gurpide@gmail.com"},
]
description="Package to calculate magnetic field decay onto a neutron star due to accretion."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
keywords = [
    "neutron star",
    "magnetic field decay",
    "astrophysics",
    "accretion",
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Repository = "https://github.com/andresgur/field-decay"

[project.optional-dependencies]
test = [
    "pytest>=8.3.5"
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autoapi>=3.6.0",
    "myst_parser>=4.0.1",
    "graphviz>=0.20.3",
    "nbsphinx>=0.9.7",
    "toml>=0.10.2"
]


[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.sphinx]
title = "Field Decay"

[tool.setuptools]
ext-modules = [
  {name = "neutron_star", sources = ["field_decay/compact_objects/neutron_star.py"]},
  {name = "co", sources = ["field_decay/compact_objects/co.py"]},
    {name = "field_decay_law", sources = ["field_decay/field_decay_law.py"]},
]
